--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Eliel</title>
+    <title>Apenas um teste</title>
 </head>
 <body>
     <h1>Este é um teste de como criar algo no GIT</h1>
     <hr>
     <p>Agora esse é um parágrafo do teste</p>
+    <hr>
+    <h2>Fazendo uma modificação no arquivo</h2>
 </body>
 </html>
