--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Agora esse é um parágrafo do teste</p>
     <hr>
     <h2>Fazendo uma modificação no arquivo</h2>
+    <h2><strong>Fazendo modificações com outras branches</strong></h2>
 </body>
 </html>
